--- a/DirectX11GraphicsEngine/DirectX11GraphicsEngine.vcxproj
+++ b/DirectX11GraphicsEngine/DirectX11GraphicsEngine.vcxproj
@@ -130,6 +130,7 @@
     <ClInclude Include="DirectX11GraphicEngine.h" />
     <ClInclude Include="DirectX11IndexBuffer.h" />
     <ClInclude Include="DirectX11VertexBuffer.h" />
+    <ClInclude Include="DX11ConstantBuffer.h" />
     <ClInclude Include="DX11Model.h" />
     <ClInclude Include="DX11RasterizerState.h" />
     <ClInclude Include="IShaderResource.h" />
@@ -149,6 +150,7 @@
     <ClCompile Include="DirectX11Buffer.cpp" />
     <ClCompile Include="DirectX11GraphicEngine.cpp" />
     <ClCompile Include="DirectX11IndexBuffer.cpp" />
+    <ClCompile Include="DX11ConstantBuffer.cpp" />
     <ClCompile Include="DX11Model.cpp" />
     <ClCompile Include="DX11RasterizerState.cpp" />
     <ClCompile Include="IShaderResource.cpp" />
