--- a/DirectX11GraphicsEngine/DirectX11GraphicsEngine.vcxproj
+++ b/DirectX11GraphicsEngine/DirectX11GraphicsEngine.vcxproj
@@ -134,6 +134,7 @@
     <ClInclude Include="DX11GPUBuffer.h" />
     <ClInclude Include="DX11Model.h" />
     <ClInclude Include="DX11RasterizerState.h" />
+    <ClInclude Include="DX11RenderContext.h" />
     <ClInclude Include="DX11RWStructuredBuffer.h" />
     <ClInclude Include="DX11StrucutredBuffer.h" />
     <ClInclude Include="IShaderResource.h" />
@@ -157,6 +158,7 @@
     <ClCompile Include="DX11GPUBuffer.cpp" />
     <ClCompile Include="DX11Model.cpp" />
     <ClCompile Include="DX11RasterizerState.cpp" />
+    <ClCompile Include="DX11RenderContext.cpp" />
     <ClCompile Include="DX11RWStructuredBuffer.cpp" />
     <ClCompile Include="DX11StrucutredBuffer.cpp" />
     <ClCompile Include="IShaderResource.cpp" />
