--- a/DirectX11GraphicsEngine/DirectX11GraphicsEngine.vcxproj.filters
+++ b/DirectX11GraphicsEngine/DirectX11GraphicsEngine.vcxproj.filters
@@ -78,6 +78,9 @@
     <ClInclude Include="DX11GPUBuffer.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
+    <ClInclude Include="DX11RenderContext.h">
+      <Filter>ヘッダー ファイル</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
@@ -117,6 +120,9 @@
       <Filter>ソース ファイル</Filter>
     </ClCompile>
     <ClCompile Include="DX11GPUBuffer.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
+    <ClCompile Include="DX11RenderContext.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
   </ItemGroup>
