DX11Materialクラスを実装

--- a/DirectX11GraphicsEngine/DirectX11GraphicsEngine.vcxproj
+++ b/DirectX11GraphicsEngine/DirectX11GraphicsEngine.vcxproj
@@ -133,6 +133,7 @@
     <ClInclude Include="DirectX11VertexBuffer.h" />
     <ClInclude Include="DX11ConstantBuffer.h" />
     <ClInclude Include="DX11GPUBuffer.h" />
+    <ClInclude Include="DX11Material.h" />
     <ClInclude Include="DX11Model.h" />
     <ClInclude Include="DX11RasterizerState.h" />
     <ClInclude Include="DX11RenderContext.h" />
@@ -157,6 +158,7 @@
     <ClCompile Include="DirectX11IndexBuffer.cpp" />
     <ClCompile Include="DX11ConstantBuffer.cpp" />
     <ClCompile Include="DX11GPUBuffer.cpp" />
+    <ClCompile Include="DX11Material.cpp" />
     <ClCompile Include="DX11Model.cpp" />
     <ClCompile Include="DX11RasterizerState.cpp" />
     <ClCompile Include="DX11RenderContext.cpp" />
