--- a/DirectX11GraphicsEngine/DirectX11GraphicsEngine.vcxproj.filters
+++ b/DirectX11GraphicsEngine/DirectX11GraphicsEngine.vcxproj.filters
@@ -84,6 +84,9 @@
     <ClInclude Include="DX11Material.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
+    <ClInclude Include="DX11Mesh.h">
+      <Filter>ヘッダー ファイル</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
