--- a/DirectX11GraphicsEngine/DirectX11GraphicsEngine.vcxproj
+++ b/DirectX11GraphicsEngine/DirectX11GraphicsEngine.vcxproj
@@ -158,7 +158,7 @@
     <ClInclude Include="framework.h" />
     <ClInclude Include="Resource.h" />
     <ClInclude Include="targetver.h" />
-    <ClInclude Include="TextureDX11.h" />
+    <ClInclude Include="DX11Texture.h" />
     <ClInclude Include="Vertex.h" />
     <ClInclude Include="stb_image.h" />
   </ItemGroup>
